Order Enhnaced and kafka Added